Fix for I18N problem with saving mail messages - Bug #23418 - r: ducarroz - a: jar